<resources>
    <string name="app_name">Thinkbro - Fit</string>
    <string name="xCorre">Correo electronico</string>
    <string name="xContraseña">Contraseña</string>
    <string name="xNombre">Nombre</string>
    <string name="xEdad">Edad</string>
    <string name="xTelefono">Telefono</string>
    <string name="xInGoogle">Ingresar con google</string>
    <string name="xPassDoc">Contraseña</string>
    <string name="invalid_mail">Correo invalido</string>
    <string name="invalid_password">Contraseña no valida</string>
    <string name="xPeso">Peso</string>
    <string name="xTalla">Talla</string>
    <string name="ximc">IMC</string>
    <string name="xPlanta">Flor favorita</string>
    <string name="xEjer001">Ejercicio</string>
    <string name="xSer001">Num. de series</string>
    <string name="xRep001">Num. de Repeticiones</string>
    <string name="xRPE001">Num. RPE</string>
    <string name="xRM001">%1RM</string>
    <string name="new_notification">Nueva notificación</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="xtxtNoPuedo">No puedo iniciar seción</string>
    <string name="xtxtVerifica">Checa tus datos</string>
    <string name="xtxtButton">Vale</string>
    <string name="xtxtNSS">NSS</string>
    <string name="xtxtRetry">Reintentar</string>
    <string name="xtxtInternet">¡repámpanos!, checa tu conexión a intenet, por favor</string>
    <string name="xtxtInstrucciones">Para poder seguir usando la aplicación, comprueba tu conexión a intenet</string>
    <string name="xtxtMúsica">Música</string>
    <string name="xtxtPerfil">Perfil</string>
    <string name="xtxtEntrena">Entrenamiento</string>
    <string name="xtxtAprende">Aprender</string>
    <string name="xtxtSoporte">Soporte</string>
    <string name="xtxtAcercaDe">Acerca</string>
    <string name="xtxtNotification">Notificaciones</string>
    <string name="xtxtNutricion">Nutrición</string>
    <string name="xtxtAlias">Alias: </string>
    <string name="xtxtAprender">Descubre</string>
    <string name="xtxtConeptoB">La bioquímica es una rama de la ciencia que estudia la composición química de los seres vivos, especialmente las proteínas, carbohidratos, lípidos y ácidos nucleicos.</string>
    <string name="xtxtCamPass">Cambiar password</string>
    <string name="xtxtPassActual">Contraseña actual:</string>
    <string name="xtxtCorreoActual">Correo actual:</string>
    <string name="xtxtNewPass">Nueva contraseña</string>
    <string name="xtxtAssistant">Tú asistente</string>
    <string name="xtxtNameAssistant">Plume</string>
    <string name="xtxtAnswer">¿Cómo puedo ayudarte?</string>
    <string name="xtxtOptionOne">La aplicación se bugea</string>
    <string name="xtxtOptionTwo">Quiero cambiar la contraseña</string>
    <string name="xtxtOptionThree">Quiero contactarme con el desarrollador</string>
    <string name="xtxtOptionFour">No puedo cambiar mi foto de perfil</string>
    <string name="xtxtMessage">Insert your Message</string>
    <string name="xtxtCovid">Covid - 19</string>
    <string name="xtxtVariantes">Variantes</string>
    <string name="xtxtPaises">Pico de contagios</string>
    <string name="xtxtSintomas">Sintomas comunes</string>
    <string name="xtxtSintomasMenos">Sintomas menos habituales</string>
    <string name="xtxtSMMUno">1. Dolor de garganta</string>
    <string name="xtxtSMMDos">2. Dolor de cabeza</string>
    <string name="xtxtSMMTres">3. Molestias y dolores</string>
    <string name="xtxtSMMCuatro">4. Diarrea</string>
    <string name="xtxtSMMCinco">5. Ojos rojos</string>
    <string name="xtxtSintomasSerios">Sintomas Serios</string>
    <string name="xtxtSSUno">1. Dificultad para respirar o disnea</string>
    <string name="xtxtSSDos">2. Perdida de movilidad o el habla, o sensacion de confucion</string>
    <string name="xtxtSSTres">3. Dolor de pecho</string>
    <string name="xtxtSMUno">1. Fiebre</string>
    <string name="xtxtSMDos">2. Tos</string>
    <string name="xtxtSMTres">3. Cansancio</string>
    <string name="xtxtSMCuatro">4. Perdida de gusto y olfato</string>
    <string name="xtxtBienvenido">Bienvenido</string>
    <string name="xtxtSalir">Salir</string>
    <string name="xtxtIniciar">Verción 1.2</string>
    <string name="xtxtPreciona">Preciona el icono</string>
    <string name="xtxtAcerca">Acerca</string>
    <string name="xtxtNewss">Noticias</string>
    <string name="xtxtCasosT">Casos totales</string>
    <string name="xtxtCasosA">Casos activos</string>
    <string name="xtxtDefunciones">Defunciones</string>
    <string name="xtxtVacunados">Vacunados</string>
    <string name="xtxtMayor">Mayor numero de contagios</string>
    <string name="xtxtLogIn">Iniciar seción</string>
    <string name="xtxtButtonIniciar">Iniciar</string>
    <string name="xtxtSubtitleLogin">y mejora tu life</string>
    <string name="xtxtNews">Nuevas buenas</string>
    <string name="xtxtLeer">Leer más</string>
    <string name="xtxtEntren">Entrenamiento</string>
    <string name="xtxtHiper">Hipertrofia</string>
    <string name="xtxtForce">Fuerza</string>
    <string name="xtxtDefini">Definición</string>
    <string name="xtxtPerderP">Perder peso</string>
    <string name="xtxtTips">Tips</string>
    <string name="xtxtMusc">Ejercicios Aislados</string>
    <string name="xtxtMuscA">Musculos Aislados</string>
    <string name="xtxtPecho">Pecho</string>
    <string name="xtxtEspalda">Espalda</string>
    <string name="xtxtPiernas">Piernas</string>
    <string name="xtxtBrazos">Brazos</string>
    <string name="xtxtAbdomen">Abdomen</string>
    <string name="xtxtGluteos">Gluteos</string>
    <string name="xtxtHombros">Hombros</string>
    <string name="xtxtPantorrillas">Pantorrillas</string>
    <string name="xtxtOtros">Ejercicio en casa</string>
    <string name="xtxtCasaUno">Ejercicio Casa 1</string>
    <string name="xtxtCasaDos">Ejercicio Casa 2</string>
    <string name="xtxtCasaTres">Ejercicio Casa 3</string>
    <string name="xtxtCasaCuatro">Ejercicio Casa 4</string>
    <string name="xtxtRegistrar">Registrar</string>
    <string name="xtxtRPERMYM">RPE, %RM Y Medidas o masa </string>
    <string name="xtxtRPEYRM">Calcular RPE y %RM</string>
    <string name="xtxtRegistrarMOP">Registrar medidas o peso</string>
    <string name="xtxtVolumen">A mayor volumen de entrenamiento</string>
    <string name="xtxtVolumenDos">Mayor hipertrofia a cierto punto</string>
    <string name="xtxtSubir">Subir progresivamente el volumen a un 20%</string>
    <string name="xtxtSubirDos">Es indispensable para hacer crecer los musculos</string>
    <string name="xtxtGeneral">De forma general</string>
    <string name="xtxtGeneralDos">10 a 20 repeticiones por grupo muscular es buen rango</string>
    <string name="xtxtConveptos">Conseptos clave</string>
    <string name="xtxtPrincipiante">Principiante: Distribuye tus 10-12 series semanales por grupo muscular/patron de movimiento a lo largo de tus días de entrenamiento y cuando repitas trata de aumentar cargas las cargas levantada (Con el incremento mas pequeño disponible para extender las progresiones al maximo tiempo posible)</string>
    <string name="xtxtIntermedio">Intermedio: Distribuye tus 13-15 series semanales por grupo muscular/patron de movimiento a lo largo de tus días de entrenamiento y sigue un enfoque lineal con una progrecion ondulante (aumenta la carga y reduce las repeticiones) semana tras semana. Pra los ejercicios de aislamiento un modelo de doble progrecion</string>
    <string name="xtxtAvanzado">Avanzado: Puedes empezar con un mezociclo de acumulacion en el que se aumentan progresibamente el numero de series, seguido de un mesociclo de intencificacion en el que se sigue una progrecion igual a la de intermedios (enfoque lineal) y terminar con un taper y toma de cargas</string>
    <string name="xtxtRecomendaciones">Recomendaciones de volumen y frecuencias de entrenamiento</string>
    <string name="xtxtRNovato">Novato: 10/12 series a la semana por grupo muscular/patron de movimiento a una frecuencia de 2-3</string>
    <string name="xtxtRIntermedio">Intermedio: 13-15 seeries a la semana por grupo muscular/patron de movimiento a una frecuencia de 3-4</string>
    <string name="xtxtRAvanzado">Avanzado: 16-20 series a la semana por grupo muscular/patron de movimiento a una frecuencia de 3-5</string>
    <string name="xtxtDescanzo">Tiempos de descanzo</string>
    <string name="xtxtTiempos">Puedes estirar durante un corto periodo de tiempo(60 segundos)</string>
    <string name="xtxtUno">1. Antebrazos</string>
    <string name="xtxtDos">2. Triceps</string>
    <string name="xtxtTres">3. Biceps</string>
    <string name="xtxtCuatro">4. Deltoides</string>
    <string name="xtxtCinco">5. Pectorales</string>
    <string name="xtxtSeis">6. Recto Abdominal</string>
    <string name="xtxtSiete">7. Oblicuos</string>
    <string name="xtxtOcho">8. Serratos</string>
    <string name="xtxtEstimulo">¿Que estimula nuestra hipertrofia cuando entrenamos?</string>
    <string name="xtxtEstimuloDos">La extencion nerviosa de las fibras, tambien relacionada con el resto de parametros, será clave en el estímulo de hipertrofia</string>
    <string name="xtxtCarbohidratos">Alimentos ricos en hidratos de carbono</string>
    <string name="xtxtProteinas">Alimentos ricos en Proteinas</string>
    <string name="xtxtGrasas">Alimentos ricos en Grasas(Lipidos)</string>
    <string name="xtxtEjercicios">Ejercicios</string>
    <string name="xtxtRecuerda">Recuerda que...</string>
    <string name="xtxtRM">¿Qúe es 1%RM?</string>
    <string name="xtxtRMDos">Es el peso maximo que podemos levantar en 1 repeticion, que es directamente proporcional con el peso levantado normalmente y numero de repeticiones</string>
    <string name="xtxtRPE">¿Qúe es RPE?</string>
    <string name="xtxtRPEDos">Es el numero maximo de repeticiones que podemos hacer a una serie tomando en concideracion la fatiga probocada</string>
    <string name="xtxtParteSup">Parte Superior</string>
    <string name="xtxtEjercicioUno">Ejercicio 1 (ButterFly)</string>
    <string name="xtxtEjercicioDos">Ejercicio 2 (ButterFly)</string>
    <string name="xtxtEjercicioTres">Ejercicio 3 (Tiron con poleas)</string>
    <string name="xtxtEjercicioCuatro">Ejercicio 4 (Press de mancuernas sentado)</string>
    <string name="xtxtEjercicioCinco">Ejercicio 5 (Lat Pulldowns)</string>
    <string name="xtxtEjercicioSeis">Ejercicio 6 (Curl de bicep con mancuerna)</string>
    <string name="xtxtEjercicioSiete">Ejercicio 7 (Curl de bicep con maquina)</string>
    <string name="xtxtEjercicioOcho">Ejercicio 8 (Tiron de polea para tricep)</string>
    <string name="xtxtEjercicioNueve">Ejercicio 9 (Fundos para tricep)</string>
    <string name="xtxtPeso">Masa cargada</string>
    <string name="xtxtQuestion">¿Cuantos años tienes?</string>
    <string name="xtxtQuestionTwo">¿Tienes familiares con diavetes?</string>
    <string name="xtxtQuestionThree">¿A que etnia perteneces?</string>
    <string name="xtxtMasa">No. de Masa(LB)</string>
    <string name="xtxtMasaLB">No. de Masa(KG)</string>
    <string name="xtxtConvercion">Convercion de Unidades LB a KG</string>
    <string name="xtxtConvercionDos">Convercion de Unidades KG a LB</string>
    <string name="xtxtRepeticiones">Repeticiones</string>
    <string name="xtxtCalcular">Calcular RPE</string>
    <string name="xtxtNoRPE">Numero de RPE</string>
    <string name="xtxtTitle">Controla más tu salud</string>
    <string name="xtxtSubtitle">y ponte fit</string>
    <string name="xtxtRegister">Registra tus macronutrientes</string>
    <string name="xtxtCaloriasD">Calorias de consumo diario</string>
    <string name="xtxtCaloriasC">Calorias que debes consumir</string>
    <string name="xtxtProteinasC">Proteinas que debes consumir</string>
    <string name="xtxtGrasasC">Grasas que debes consumir</string>
    <string name="xtxtCarbohidratosC">Carbohidratos que debes consumir</string>
</resources>