<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/ColorBackground"
    app:cardCornerRadius="35dp"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/dialogback"
            app:tint="@color/ColorOnSecondary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:text="@string/xtxtNoPuedo"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:textSize="40dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/xtxtVerifica"
                android:fontFamily="@font/montserrat_light"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <Button
                android:id="@+id/ok_no_inicio"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xtxtButton"
                android:fontFamily="@font/montserrat_medium"
                android:background="@drawable/diseno_boton"/>

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>