<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="36dp"
        app:cardBackgroundColor="@color/ColorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="68dp"
            app:cardBackgroundColor="@color/ColorOnSecondary">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_nowifi"
                app:tint="@color/ColorIcon"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:text="@string/xtxtInternet"
            android:fontFamily="@font/montserrat_bold"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/xtxtInstrucciones"
            android:fontFamily="@font/montserrat_light"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnRetry"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xtxtRetry"
            android:fontFamily="@font/montserrat_medium"
            android:background="@drawable/diseno_boton"
            />

    </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>