<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.SecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ColorBackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/diseno_cardcorner"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/xbtnSettings"
                android:layout_gravity="right"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/settings"
                app:tint="@color/ColorIcon"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idTVTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:textColor="@color/ColorOnPrimary"
                    android:text="@string/app_name"
                    android:fontFamily="@font/montserrat_regular"/>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:src="@drawable/snake"
                android:scaleType="centerCrop"
                app:tint="@color/ColorIcon"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/diseno_settings"
                    android:backgroundTint="@color/ColorTertiaryLight"
                    android:textSize="40dp"
                    android:textColor="@color/ColorLogo"
                    android:text="@string/xtxtTitle"
                    android:fontFamily="@font/montserrat_medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/diseno_settings"
                    android:backgroundTint="@color/ColorTertiaryLight"
                    android:textSize="18dp"
                    android:textColor="@color/ColorLogo"
                    android:text="@string/xtxtSubtitle"
                    android:fontFamily="@font/montserrat_light"/>

            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/idRVTips"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>